# python-project-template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  cookiecutter.json  makefile  meta.yaml  noxfile.py  pyproject.toml  setup.py  tox.ini
mamba/: install-libprojcxx.sh
packaging/: pypi.md
packaging/conda/: install-pyproj.sh  meta.yaml
src/cxx/: main.cpp  main.h
src/python/project/: __init__.py
src/python/project/tests/: test_cxxmod.py  test_rust_proj.py
src/python/{{cookiecutter.project_name}}/: __init__.py
src/python/{{cookiecutter.project_name}}/tests/: test_cxxmod.py  test_rust_proj.py
src/rust/: Cargo.toml  lib.rs
{{cookiecutter.project_name}}/: .flake8  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  makefile  noxfile.py  pyproject.toml  requirements.test.txt  setup.py
{{cookiecutter.project_name}}/packaging/conda/: meta.yaml
{{cookiecutter.project_name}}/src/python/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/src/python/{{cookiecutter.project_name}}/tests/: test_cxxmod.py  test_rust_proj.py
{{cookiecutter.project_name}}/src/rust/: Cargo.toml
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  makefile  noxfile.py  requirements.test.txt  setup.py
{{cookiecutter.project_slug}}/packaging/: pypi.md
{{cookiecutter.project_slug}}/packaging/conda/: install-libprojcxx.sh  meta.yaml
{{cookiecutter.project_slug}}/src/cxx/: main.cpp
{{cookiecutter.project_slug}}/src/python/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/src/python/{{cookiecutter.project_slug}}/tests/: test_cxxmod.py  test_rust_proj.py
{{cookiecutter.project_slug}}/src/rust/: Cargo.toml  lib.rs
