[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=40.8.0", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length=100
include = '\.pyi?$'

[project.optional-dependencies]
test = [
	"pre-commit",
	"check-manifest >= 0.42",
    "flake8",
    "pytest",
    "pytest-benchmark",
    "setuptools-rust"
]
