[package]
name = "rust_proj"
version = "{{ cookiecutter.version }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
edition = "2021"

[dependencies]
pyo3 = { version = "0.14.5", features = ["extension-module"] }

[lib]
name = "submodule"
path = "lib.rs"
crate-type = ["cdylib"]
